Fix JavaFX runtime components missing error by adding Maven Shade Plugin and Launcher class
Co-authored-by: samyzzz07 <190715935+samyzzz07@users.noreply.github.com>